@@ -4,6 +4,7 @@ S3method(fortify,RasterBrick)
 S3method(fortify,RasterLayer)
 S3method(fortify,RasterStack)
 S3method(predict,superClass)
+S3method(predict,unsuperClass)
 S3method(print,mapValidation)
 S3method(print,superClass)
 S3method(print,unsuperClass)
