@@ -4,10 +4,12 @@ New:
 
 * function `oneHotEncode`: splits a single rasterLayer into multiple layers (one per class)
   with one-hot encoding, i.e. pixel value = 1 for matches, pixel value = 0 for all other classes (background).
-* ggR() can now display more than one layer. Each layer can be plotted to a subplot in a multi-panel grafic.
+* `ggR()` can now display more than one layer. Each layer can be plotted to a subplot in a multi-panel grafic.
+* `encodeQA()`, `decodeQA()` and `classifyQA()` can now deal with the new QA format introduced with Landsat Collection data. Legacy QA designations can still be interpreted by setting the `legacy` argument.
+* new `predict()` method for unsupervised classification models (`unsuperClass`).
 
 Changes: 
-* all `radCor` DOS methods now work for Landsat 8 OLI 
+* all `radCor` DOS methods now work for Landsat 8 OLI
 
 Fixes:
 * fix `unsuperClass` for algorithms other than Hartigan-Wong (reported by Alex Ilich)
